fix(Catalogue): update edit icon background color and position for better visibility

--- a/src/pages/Catalogue/Catalogue.css
+++ b/src/pages/Catalogue/Catalogue.css
@@ -45,7 +45,7 @@
 .FaEdit{
     width: 25px;
     height: 25px;
-    background: rgba(241, 65, 65, 0.5);
+    background: rgba(0, 0, 0, 0.5);
     padding-left: 5%;
     padding-right: 3%;
     padding-top: 3%;
@@ -54,6 +54,8 @@
     color: #ffffff;
     cursor: pointer;
     position: absolute;
+    top: 10px;
+    right: 10px;
 }
 
 
